unpackaged/main/default/objects/Build_Only__c/Build_Only__c.object-meta.xml
<CustomObject>
    <label>Build Only</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Build Only</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>