unpackaged/main/default/objects/Build_Only__c/fields/AHJ__c.field-meta.xml
<CustomField>
    <fullName>AHJ__c</fullName>
    <label>AHJ</label>
    <length>60</length>
    <type>Text</type>
</CustomField>