unpackaged/main/default/objects/Build_Only__c/fields/Build_Only_Partner__c.field-meta.xml
<CustomField>
    <fullName>Build_Only_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Build Only Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Build Only</relationshipLabel>
    <relationshipName>Build_Only_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>