unpackaged/main/default/objects/Build_Only__c/fields/Cost_of_Permitting__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Permitting__c</fullName>
    <label>Cost of Permitting</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>