unpackaged/main/default/objects/Build_Only__c/fields/Doc_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Doc_Signed_Date__c</fullName>
    <label>Doc Signed Date</label>
    <type>Date</type>
</CustomField>