unpackaged/main/default/objects/Build_Only__c/fields/Engineering_Design_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Design_Complete_Date__c</fullName>
    <label>Engineering Design Complete Date</label>
    <type>Date</type>
</CustomField>