unpackaged/main/default/objects/Build_Only__c/fields/Inspection_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Scheduled_Date__c</fullName>
    <label>Inspection Scheduled Date</label>
    <type>Date</type>
</CustomField>