unpackaged/main/default/objects/Build_Only__c/fields/Number_of_Panels__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Panels__c</fullName>
    <label>Number of Panels</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>