unpackaged/main/default/objects/Build_Only__c/fields/Permit_Ready_Date__c.field-meta.xml
<CustomField>
    <fullName>Permit_Ready_Date__c</fullName>
    <label>Permit Ready Date</label>
    <type>Date</type>
</CustomField>