unpackaged/main/default/objects/Build_Only__c/fields/Permit_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Permit_Received_Date__c</fullName>
    <label>Permit Received Date</label>
    <type>Date</type>
</CustomField>