unpackaged/main/default/objects/Build_Only__c/fields/PTO_Date__c.field-meta.xml
<CustomField>
    <fullName>PTO_Date__c</fullName>
    <label>PTO Date</label>
    <type>Date</type>
</CustomField>