unpackaged/main/default/objects/Build_Only__c/fields/Scope_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Work__c</fullName>
    <label>Scope of Work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inspection Completed</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Install Completed</fullName>
            </value>
            <value>
                <fullName>Permit and Installation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>