unpackaged/main/default/objects/Build_Only__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>13. Engineering Design Complete</fullName>
            </value>
            <value>
                <fullName>14. Permit Sent</fullName>
            </value>
            <value>
                <fullName>15. Permit Ready</fullName>
            </value>
            <value>
                <fullName>16. Permit Received</fullName>
            </value>
            <value>
                <fullName>17. Install Ready</fullName>
            </value>
            <value>
                <fullName>18. Installation</fullName>
            </value>
            <value>
                <fullName>19. Install Completed</fullName>
            </value>
            <value>
                <fullName>20. Inspection Scheduled</fullName>
            </value>
            <value>
                <fullName>21. Inspection Complete</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>10. PTO</fullName>
                <isActive>false</isActive>
                <label>10. PTO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>