unpackaged/main/default/objects/Build_Only__c/fields/System_Size__c.field-meta.xml
<CustomField>
    <fullName>System_Size__c</fullName>
    <label>System Size (kW)</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>