unpackaged/main/default/objects/Build_Only__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <label>Zip Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>