unpackaged/main/default/objects/Build_Only__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Build_Only_Partner__c</columns>
    <columns>Scope_of_Work__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>