unpackaged/main/default/objects/Build_Only__c/listViews/Build_Only_Build_Only.listView-meta.xml
<ListView>
    <fullName>Build_Only_Build_Only</fullName>
    <filterScope>Queue</filterScope>
    <label>Build Only</label>
    <queue>Build_Only</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>